[package]
name = "moe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
dotenv = "0.15.0"
figment = "0.10.14"
jsonwebtoken = "9.2.0"
rocket_cors = "0.6.0"
serde = "1.0.195"
serde_json = "1.0.111"
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[profile.dev]
opt-level = 1
debug = 0
